# bloomFilter

./: CMakeLists.txt  CTestTestfile.cmake  Dockerfile  README.md  main
.github/workflows/: push-to-hub.yml
Testing/Temporary/: CTestCostData.txt
src/: App.cpp  App.h  Authenticator.cpp  Authenticator.h  BloomFilter.cpp  BloomFilter.h  BloomInitializer.cpp  BloomInitializer.h  BloomOperator.cpp  BloomOperator.h  DataProcessor.cpp  DataProcessor.h  IHashCommand.h  IdataProccessor.cpp  IdataProccessor.h  Initializer.h  Operateable.h  Runable.cpp  Runable.h  StandardHash.cpp  StandardHash.h  StringCollector.cpp  StringCollector.h  calc.cpp  dumAuthinticator.cpp  dumAuthinticator.h  main.cpp
tests/: calc_test.cpp  filter_test.cpp  test_main.cpp
